--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "squbix_admin",
+  "homepage": "https://squbix.com/admin",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
